bk_ida/gccida/c3/get_file_function_name_long
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_file_function_name_long/src/tree.c:5106:6: error: use of undeclared identifier 'append_random_chars_value'; did you mean 'append_random_chars'?
v5 = append_random_chars_value; 
     ^~~~~~~~~~~~~~~~~~~~~~~~~
     append_random_chars
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_file_function_name_long/src/tree.c:4539:1: note: 'append_random_chars' declared here
append_random_chars (template)
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_file_function_name_long/src/tree.c:5107:7: error: use of undeclared identifier 'append_random_chars_value'; did you mean 'append_random_chars'?
if ( !append_random_chars_value ) 
      ^~~~~~~~~~~~~~~~~~~~~~~~~
      append_random_chars
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_file_function_name_long/src/tree.c:4539:1: note: 'append_random_chars' declared here
append_random_chars (template)
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_file_function_name_long/src/tree.c:5113:1: error: use of undeclared identifier 'append_random_chars_value'
append_random_chars_value = v5; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_file_function_name_long/src/tree.c:5116:10: error: use of undeclared identifier 'append_random_chars_letters'
v1[v6] = append_random_chars_letters[v5 % 0x3E]; 
         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_file_function_name_long/src/tree.c:5117:14: error: use of undeclared identifier 'append_random_chars_letters'
v1[v6 + 1] = append_random_chars_letters[v5 / 0x3E 
             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_file_function_name_long/src/tree.c:5120:14: error: use of undeclared identifier 'append_random_chars_letters'
v1[v6 + 2] = append_random_chars_letters[v5 / 0xF04 
             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_file_function_name_long/src/tree.c:5123:14: error: use of undeclared identifier 'append_random_chars_letters'
v1[v6 + 3] = append_random_chars_letters[v5 / 0x3A2F8 
             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_file_function_name_long/src/tree.c:5127:14: error: use of undeclared identifier 'append_random_chars_letters'
v1[v6 + 4] = append_random_chars_letters[v5 / 0xE17810 
             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_file_function_name_long/src/tree.c:5131:14: error: use of undeclared identifier 'append_random_chars_letters'
v1[v6 + 5] = append_random_chars_letters[v5 / 0x369B13E0 
             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_file_function_name_long/src/tree.c:5148:20: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( v9 != 46 && ( sch_istable[v9] & 0x8C) == 0 ) 
                   ^~~~~~~~~~~
                   _sch_istable
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_file_function_name_long/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_file_function_name_long/src/obj/tree.o] Error 1
